samples/_failures_safe/1761341767_a296a9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_51cf1623.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_51cf1623.c:152: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_51cf1623.c:151:9: error: expected declaration or statement at end of input
  151 |         for
      |         ^~~
./samples/SAFE/__tmp_51cf1623.c:151:9: error: expected declaration or statement at end of input
